[gd_scene load_steps=8 format=3 uid="uid://cweb37xoqlj1f"]

[ext_resource type="Script" path="res://kitchen.gd" id="1_35im4"]
[ext_resource type="Texture2D" uid="uid://6h8tfk7j7oir" path="res://Assets/Map/Home/Kitchen/kitchen.png" id="1_u6gp2"]
[ext_resource type="Texture2D" uid="uid://dhg3sdw5a3tai" path="res://Assets/Map/Home/Kitchen/kitchen_shadow.png" id="3_rpyss"]
[ext_resource type="Texture2D" uid="uid://dd1db72vwabjv" path="res://Assets/Map/Home/Kitchen/food.png" id="4_6omcp"]
[ext_resource type="Texture2D" uid="uid://cfljrbb8dob02" path="res://Assets/Map/Home/Kitchen/food_shadow.png" id="4_e5ej7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ain70"]
size = Vector2(689, 140.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6utts"]
size = Vector2(246.5, 357)

[node name="Kitchen" type="Node2D"]
script = ExtResource("1_35im4")

[node name="kitchen" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_u6gp2")

[node name="kitchenShadow" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 540)
texture = ExtResource("3_rpyss")

[node name="Hallway" type="Area2D" parent="."]
position = Vector2(71, 78)

[node name="hallwayCol" type="CollisionShape2D" parent="Hallway"]
position = Vector2(833.5, 946.375)
shape = SubResource("RectangleShape2D_ain70")

[node name="Food" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="foodCol" type="CollisionShape2D" parent="Food"]
position = Vector2(969.75, 758.5)
shape = SubResource("RectangleShape2D_6utts")

[node name="food" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(960, 540)
texture = ExtResource("4_6omcp")

[node name="foodShadow" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 540)
texture = ExtResource("4_e5ej7")

[connection signal="input_event" from="Hallway" to="." method="_on_hallway_input_event"]
[connection signal="mouse_entered" from="Hallway" to="." method="_on_hallway_mouse_entered"]
[connection signal="mouse_exited" from="Hallway" to="." method="_on_hallway_mouse_exited"]
